fix(multiple): ripples not showing up in some cases (#29672)
Fixes the following issues that prevented the ripples from showing up:
* We weren't passing an injector into the `RippleRenderer` created by the `RippleLoader` which meant that it was never injecting the structural styles.
* The checkbox and tabs ripple selectors weren't specific enough which meant that they would be overridden in some cases. We were handling this in other components, but for some reason these two were skipped.

Fixes #29670.

--- a/src/material/tabs/_tabs-common.scss
+++ b/src/material/tabs/_tabs-common.scss
@@ -83,7 +83,7 @@ $mat-tab-animation-duration: 500ms !default;
     }
   }
 
-  .mat-mdc-tab-ripple {
+  .mat-mdc-tab-ripple.mat-mdc-tab-ripple {
     position: absolute;
     top: 0;
     left: 0;
